Functionnalities working on dev org

--- a/force-app/main/default/classes/UpdateAllAccounts.cls
+++ b/force-app/main/default/classes/UpdateAllAccounts.cls
@@ -1,8 +1,14 @@
 global class UpdateAllAccounts implements Database.Batchable<sObject>{
     
+
+
+    // inutile ? (on a déjà updateAccount en batch)
+
+    
    global Database.QueryLocator start(Database.BatchableContext info){ 
        //Requeter seulement les comptes qui ont au moins une commande avec le Status 'Ordered'
-       return Database.getQueryLocator('SELECT Id FROM Account');
+       return Database.getQueryLocator('SELECT Id FROM Account'); //('SELECT AccountId FROM order WHERE Status = 'ordered' ');
+       //('SELECT Id FROM Account WHERE Id IN ( SELECT AccountId FROM Order WHERE Status = 'Ordered')')
 
    }
     
